First pages commit

--- a/app/_includes/scripts.html
+++ b/app/_includes/scripts.html
@@ -1,4 +1,4 @@
-  <!-- build:js assets/js/vendor.js -->
+  <!-- build:js({.tmp,app}) assets/js/vendor.js -->
   <script src="/_bower_components/jquery/dist/jquery.js"></script>
   <!-- endbuild -->
 
