--- a/app/_includes/styles.html
+++ b/app/_includes/styles.html
@@ -136,7 +136,7 @@ ul#menulang li a
   text-align: center;
   color: #000;
   text-decoration: none;
-  background: url(assets/img/img.jpg);} 
+  background: url(/assets/img/img.jpg);} 
 
 ul#menulang li.selected a
 { height: auto;
@@ -144,10 +144,10 @@ ul#menulang li.selected a
 
 ul#menulang li.selected
 { margin-right: 7px;
-  background: url(assets/img/img2.jpg) no-repeat center center fixed;}
+  background: url(/assets/img/img2.jpg) no-repeat center center fixed;}
 
 ul#menulang li.selected a, ul#menu li.selected a:hover
-{ background: url(assets/img/img2.jpg);
+{ background: url(/assets/img/img2.jpg);
   margin-right: 7px;
   color: #000;}
 
@@ -157,11 +157,11 @@ ul#menulang li a:hover
   
 @font-face {
 font-family: "Dosis-Book";
-src: url("assets/fonts/Dosis-Book.ttf");
+src: url("/assets/fonts/Dosis-Book.ttf");
 }  
 @font-face {
 font-family: "Dosis-Medium";
-src: url("assets/fonts/Dosis-Medium.ttf");
+src: url("/assets/fonts/Dosis-Medium.ttf");
   }
 #content
 { text-align: left;
