--- a/app/_includes/styles.html
+++ b/app/_includes/styles.html
@@ -1,4 +1,4 @@
-<style>
+<!--<style>
   html
 { height: 100%;}
 
@@ -150,86 +150,11 @@ ul#menulang li.selected a, ul#menu li.selected a:hover
 { background: url(/assets/img/img2.jpg);
   margin-right: 7px;
   color: #000;}
-
-ul#menulang li a:hover
-{ color: #323232;
-  margin-right: 7px;}
-  
-@font-face {
-font-family: "Dosis-Book";
-src: url("/assets/fonts/Dosis-Book.ttf");
-}  
-@font-face {
-font-family: "Dosis-Medium";
-src: url("/assets/fonts/Dosis-Medium.ttf");
-  }
-#content
-{ text-align: left;
-  padding: 0;
-  float: center;
-  font-family: 'Dosis-Book' sans-serif;
-  font-size: 20px;
-  height: auto;
-  color: #000;}
- 
-#content2
-{ margin: 0;
-  text-align: center;
-  padding-right: 100px;
-  font-family: 'Dosis-Medium' sans-serif;
-  font-size: 35px; 
-  color: #000;
-}   
-  
-#clear{clear:both;}
-
-#footer
-{ width: auto;} 
-
-  
-@media (min-width: 1071px) {
-#main{width:960px;}
-#logo{width:61px;height:auto;}
-#top{width:960px;}
-#box{width:808px;float:right;}
-#footer{margin:0;width:1071px;}
-}
-
-@media (max-width: 1070px) {
-#main{width:930px;}
-#logo{width:61px;height:auto;}
-#top{width:930px;}
-#box{width:793px;float:right;}
-#footer{margin:0;width:930px;}
-}
-
-@media (max-width: 970px) {
-#main{width:730px;}
-#logo{width:106px;height:auto;}
-#top{width:622px;}
-#box{width:730px;float:right;}
-#footer{margin:0;width:730px;}
-}
-
-@media (max-width: 750px) {
-#main{width:420px;}
-#logo{width:61px;height:auto;}
-#top{width:420px;}
-#box{width:420px;}
-#footer{margin:0;width:420px;}
-}
-
-@media (max-width: 470px) {
-#main{width:300px;}
-#logo{width:43px;height:auto;}
-#top{width:300px;}
-#box{width:300px;}
-#footer{margin:0;width:300px;}
-}
-
-
-</style>
+-->
 <!-- build:css({app,.tmp}) /assets/css/main.css -->
+<link href='http://fonts.googleapis.com/css?family=Bree+Serif&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Dosis:500,400&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+
 <link rel="stylesheet" href="/_bower_components/normalize-css/normalize.css">
 
 <link rel="stylesheet" href="/assets/css/screen.css">
