--- a/app/assets/_scss/base/_variables.scss
+++ b/app/assets/_scss/base/_variables.scss
@@ -3,8 +3,8 @@
 $sans-serif: $helvetica;
 $serif: $georgia;
 
-$base-font-family: $sans-serif;
-$header-font-family: $base-font-family;
+$base-font-family: "Dosis";
+$header-font-family: "Bree Serif";
 
 // Sizes
 ///////////////////////////////////////////////////////////////////////////////
@@ -28,11 +28,11 @@ $base-body-color: white;
 
 //  Font Colors
 $base-font-color: $dark-gray;
-$base-accent-color: $blue;
+$base-accent-color: #3f3f40;
 
 //  Text Link Colors
-$base-link-color: $base-accent-color;
-$hover-link-color: darken($base-accent-color, 15);
+$base-link-color: #000;
+$hover-link-color: lighten($base-accent-color, 0);
 
 // Border color
 $base-border-color: $light-gray;
