--- a/app/_includes/scripts.html
+++ b/app/_includes/scripts.html
@@ -8,5 +8,6 @@
 
   <!-- build:js({.tmp,app}) assets/js/main.js -->
   <script src="/assets/js/memo.js"></script>
+  <script src="/assets/js/slowa.js"></script>
   <script src="/assets/js/app.js"></script>
   <!-- endbuild -->
