--- a/app/assets/_scss/component/_main.scss
+++ b/app/assets/_scss/component/_main.scss
@@ -92,8 +92,8 @@ section {
 	min-height: 70%;
 	height: auto;
   text-align: center;
-  margin-top: 100px;
-	margin-bottom: 100px;
+  padding-top: 100px;
+	padding-bottom: 100px;
 	img.full{
 		height: 100%;
 		max-height: 90%;
