--- a/app/assets/_scss/page/_info.scss
+++ b/app/assets/_scss/page/_info.scss
@@ -106,6 +106,7 @@ section.info {
 		}
 		&.info_3 {
 			background: #a8dacb url(../img/info/03/top.png) top center repeat-x;
+			padding-top: 180px;
 
 			& > h2{
 				top: 45px;
