--- a/app/assets/_scss/page/_gry.scss
+++ b/app/assets/_scss/page/_gry.scss
@@ -5,7 +5,6 @@ section.gry {
 		@include outer-container;
 		max-width: 480px;
 		width: 100%;
-	  @include row(table);
 	
 	}
 	ul.content{
@@ -39,9 +38,9 @@ section.gry {
 		}
 	}
 	ul.tabs li {
-
 		@include span-columns(1 of 3);
-		
+		width: 33%;
+		margin-right: 0;
 		text-align: center;
 
 		background: black url(../img/gry/mask8white.png) center center no-repeat;
