--- a/app/_includes/kontakt.html
+++ b/app/_includes/kontakt.html
@@ -26,4 +26,6 @@ class: kontakt
 <p class="pb0">dr Wojciech Janicki</p>
 <p class="pb0">prof. Lucyna Talejko-Kwiatkowska</p>
 <p class="pb0">mgr Agata Kulczyk</p>
+<p class="pb0">Szymon Wilk</p>
+
 <p>mgr Marzena Drab</p>
