--- a/app/_layouts/game.html
+++ b/app/_layouts/game.html
@@ -28,7 +28,7 @@
   <body class="games">
     <header>
         <h3>{{page.title}}</h3>
-        <a href="/gry/" class="close_x"><img src="/assets/img/gry/icon_x.png" alt=""></a>
+        <a href="/gry/" class="close_x"><img src="/assets/img/icon/close_x.png" alt=""></a>
       
     </header>
 
