--- a/app/assets/_scss/page/_kontakt.scss
+++ b/app/assets/_scss/page/_kontakt.scss
@@ -9,6 +9,8 @@ section#kontakt {
 	@media (max-width: 710px) {
 		white-space: normal;
 		padding: 16px;
+		padding-top: 140px;
+		padding-bottom: 100px;
 	}
 
 	p.pb0 {
