--- a/app/assets/_scss/component/_main.scss
+++ b/app/assets/_scss/component/_main.scss
@@ -92,7 +92,7 @@ section {
 	min-height: 70%;
 	height: auto;
   text-align: center;
-  padding-top: 100px;
+  padding-top: 140px;
 	padding-bottom: 100px;
 	img.full{
 		height: 100%;
@@ -108,13 +108,21 @@ section {
 	&.home {
 		padding-top: 0px;
 	}
-	h1{
-		text-align: left;
-		padding-left: 90px;
-	}
 	
 }
 
+body > h3{
+	position: relative;
+	top: 140px;
+	left: 10%;
+	text-align: left;
+	font-size: 30px;
+	font-size: 1.2em;
+	line-height: 1.6em;
+	@media (max-width: 710px) {
+		left: 2%;
+	}
+}
 // footer
 footer {
 	background: transparent url("../img/stopka.png") bottom center repeat-x;
