--- a/app/assets/_scss/page/_oBarborce.scss
+++ b/app/assets/_scss/page/_oBarborce.scss
@@ -9,6 +9,8 @@ section#o-barborce {
 	@media (max-width: 710px) {
 		white-space: normal;
 		padding: 16px;
+		padding-top: 140px;
+		padding-bottom: 100px;
 	}
 
 	h5{
