--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -29,12 +29,12 @@
       <div><a href="/">Barbórka</a></div>
       <ul id="menu">
         <li id="magic-line"></li>
-        <li ><a href="#o-barborce">O BARBÓRCE</a></li>
-        <li ><a href="#kontakt">KONTAKT</a></li>
+        <li ><a href="/#o-barborce">O BARBÓRCE</a></li>
+        <li ><a href="/#kontakt">KONTAKT</a></li>
         <li class="hide {% if page.menu == 1 %}current_page{% endif %}"><a href="/infografiki/">INFOGRAFIKI</a></li>
         <li class="hide {% if page.menu == 2 %}current_page{% endif %}"><a href="/gry/">GRY</a></li>
-        <li ><a href="#pobierz">POBIERZ</a></li>
-        <li ><a href="#partnerzy">PARTNERZY</a></li>
+        <li ><a href="/#pobierz">POBIERZ</a></li>
+        <li ><a href="/#partnerzy">PARTNERZY</a></li>
       </ul>
       <ul id="lang">
         <li><a href="index.html">PL</a></li>
