--- a/app/_includes/scripts.html
+++ b/app/_includes/scripts.html
@@ -1,10 +1,4 @@
-  <!-- build:js({.tmp,app}) assets/js/vendor.js -->
-  <script src="/_bower_components/jquery/dist/jquery.js"></script>
-  <!-- endbuild -->
-
-  <!-- build:js assets/js/plugins.js -->
-
-  <!-- endbuild -->
+  <script src="/assets/js/jquery.min.js"></script>
 
   <!-- build:js({.tmp,app}) assets/js/main.js -->
   <script src="/assets/js/memo.js"></script>
