--- a/app/_includes/partnerzy.html
+++ b/app/_includes/partnerzy.html
@@ -1,8 +1,11 @@
-<!-- ---
-layout: default
-title: barborka
-menu: 5
-class: first
---- -->
-
-<img class="full" src="/assets/img/rodzinka.jpg" alt="">
+<p class="fl">
+	Barbórka powstała w ramach projektu Czarne Twarze Europy, pod skrzydłami
+<br/>organizacji Histoire de Savoir(s).
+</p> 
+<p class="fl">
+	Cały czas pragniemy i poszukujemy współpracy z partnerami.
+</p>
+<a href="http://www.histoiredesavoirs.com/" target="_blank">
+<img src="/assets/img/partnerzy/HdeSs.png" alt=""></a>
+<a href="https://www.facebook.com/czarnetwarzeeuropy" class="right" target="_blank">
+<img src="/assets/img/partnerzy/cte.png" alt=""></a>
