--- a/app/assets/_scss/page/_oBarborce.scss
+++ b/app/assets/_scss/page/_oBarborce.scss
@@ -25,10 +25,13 @@ section#o-barborce, section#partnerzy {
 	}
 }
 section#partnerzy a{
-	width: 33%;
+	width: 45%;
 	display: inline-block;
+	text-align: center;
+	img{
+		width: 60%;
+	}
 	&.right{
 		float: right;
-		margin-right: 30px;
 	}
 }
