--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -18,10 +18,6 @@
     <link rel="apple-touch-icon" sizes="152x152" href="/assets/img/icon/apple-touch-icon-152x152.png" />
 
     {% include styles.html %}
-
-    <!-- build:js({app,.tmp}) /assets/js/modernizr.js - - >
-    <script src="/_bower_components/modernizr/modernizr.js"></script>
-    <!- - endbuild -->
   </head>
 
   <body>
@@ -49,7 +45,7 @@
     </section>
     {% if page.class == 'home' %}
     <hr/>
-    <h3>O BARBORCE</h3>
+    <h3>O BARBÓRCE</h3>
     <section id="o-barborce">
       {% include o-barborce.html %}
     </section>
