--- a/app/assets/_scss/component/_main.scss
+++ b/app/assets/_scss/component/_main.scss
@@ -8,7 +8,7 @@ body {
 }
 header {
 	@include outer-container;
-	padding-top: 20px;
+	padding-top: 18px;
 	padding-left: 2%;
 	padding-right: 2%;
 	max-width: 100%;
@@ -39,13 +39,13 @@ header {
 	}
 	& > ul#menu {
 		@include span-columns(10);
-		margin-top: 40px;
+		margin-top: 35px;
 		position: relative;
 		text-align: center;
 		@media (max-width: 660px) {
 			float: none;
 			margin: auto;
-			margin-top: 40px;
+			margin-top: 20px;
 		}
 		& > li{
 			@media (max-width: 660px) {
@@ -119,6 +119,7 @@ body > h3{
 	font-size: 30px;
 	font-size: 1.2em;
 	line-height: 1.6em;
+	width: 80%;
 	@media (max-width: 710px) {
 		left: 2%;
 	}
