--- a/app/assets/_scss/page/_info.scss
+++ b/app/assets/_scss/page/_info.scss
@@ -169,8 +169,9 @@ body.infoGrafiki {
 	}	
 	button.message {
 		border: none;
-		background-color: rgba(255,255,255,0.5);
+		background: none;
 		color: transparent;
+		@include hide-text();
 		padding: 8px;
 		margin: -4px;
 		width: 100%;
