--- a/app/_includes/o-barborce.html
+++ b/app/_includes/o-barborce.html
@@ -1,7 +1,7 @@
 <p class="fl">
 Edukacyjny projekt „Barbórka” powstał z&nbsp;potrzeby przybliżenia młodemu odbiorcy
 <br>tajemnic górniczego świata. Zaprojektowane materiały podzielone zostały na dwie
-<br>grupy. Pierwsza część dostępnych informacji opowiada o&nbsp;gór- niczych tradycjach, pracy
+<br>grupy. Pierwsza część dostępnych informacji opowiada o&nbsp;górniczych tradycjach, pracy
 <br>górników oraz historii powstawania węgla, natomiast druga część sprawdza nabytą
 <br>wcześniej wiedzę. Zawartość projektu została skonsultowana pod względem merytory-
 <br>cznym ze specjalistami z&nbsp;branży górniczej, natomiast część edukacyjna opracowywana
