--- a/app/_includes/pobierz.html
+++ b/app/_includes/pobierz.html
@@ -5,4 +5,4 @@ menu: 3
 class: first
 --- -->
 
-<img class="full" src="/assets/img/rodzinka.jpg" alt="">
+<img class="full" src="/assets/img/rodzinka.png" alt="rodzinka">
