--- a/app/assets/_scss/page/_gry.scss
+++ b/app/assets/_scss/page/_gry.scss
@@ -12,7 +12,7 @@ section.gry {
 	
 	ul.content li {
 		display: none;
-		text-align: left;
+		text-align: center;
 		padding-top: 10px;
 		&.selected {
 			display: block;
