--- a/app/assets/_scss/component/_main.scss
+++ b/app/assets/_scss/component/_main.scss
@@ -96,9 +96,9 @@ section {
 	padding-bottom: 100px;
 	img.full{
 		height: 100%;
-		max-height: 90%;
 		height: auto;
 		min-width: 400px;
+
 	}
 	p.color{
 		color: #C7223E;
@@ -107,6 +107,9 @@ section {
 	}
 	&.home {
 		padding-top: 0px;
+		img.full {
+			margin-top: -80px;
+		}
 	}
 	
 }
