--- a/app/_includes/pobierz.html
+++ b/app/_includes/pobierz.html
@@ -1,8 +1,3 @@
-<!-- ---
-layout: default
-title: barborka
-menu: 3
-class: first
---- -->
-
-<img class="full" src="/assets/img/rodzinka.png" alt="rodzinka">
+<!-- <img class="full" src="/assets/img/rodzinka.png" alt="rodzinka"> -->
+<h3>BARBÓRKA DO POBRANIA DOSTĘPNA BĘDZIE NIEBAWEM.
+<br/>TYMCZASEM ZAGRAJ W GRĘ I POSCROLLUJ INFOGRAFIKI.</h3>
