--- a/app/assets/_scss/component/_main.scss
+++ b/app/assets/_scss/component/_main.scss
@@ -111,6 +111,20 @@ section {
 			margin-top: -80px;
 		}
 	}
+
+	&#pobierz h3{
+	  font-family: "dosis";
+		font-size: 20px;
+		font-weight: bold;
+		position: relative;
+		width: 100%;
+		margin-top: 150px;
+		margin-bottom: 150px;
+	}
+	&#infografiki, &#gry{
+	  padding-top: 150px;
+		padding-bottom: 150px;
+	}
 	
 }
 
